# OPC-UA-South-Driver-for-NEURON

./: CMakeLists.txt  OPC-UA.json  README.md  opc_ua_plugin.c  opc_ua_plugin.h  run.sh
client/: ua_client.c  ua_client.h
ua_tag_handle/: ua_tag_handle.c  ua_tag_handle.h
ua_tag_hash/: ua_tag_hash.c  ua_tag_hash.h
